--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ phases:
   install:
     commands:
         - yum install python3-pip -y
-        - pip3 install Flask -y
+        - pip3 install Flask
   build:
     commands:
       - echo Build started on `date`
